<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar_main"
        android:id="@+id/main_toolbar"
        style="@style/DrawerArrowStyle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/logo_dimens"
        android:layout_height="@dimen/logo_dimens"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@id/guideline_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:layout_marginHorizontal="@dimen/default_large_margin"
        android:textAppearance="@style/fieldTitle"
        app:helperTextEnabled="true"
        app:helperText="@string/required_field"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_input"
        app:endIconMode="clear_text" >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_medium"
            android:drawableTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/login_email_title"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/higher_plus_text_size"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        app:helperTextEnabled="true"
        app:helperText="@string/required_field"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/default_large_margin"
        android:textAppearance="@style/fieldTitle"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_input"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="@dimen/drawable_padding_medium"
            android:drawableTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:hint="@string/login_password_title"
            android:inputType="textPassword"
            android:textSize="@dimen/higher_plus_text_size"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in_button_text"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/default_subtitle_size"
        app:cornerRadius="12dp"
        android:paddingVertical="@dimen/default_padding"
        android:paddingHorizontal="@dimen/default_large_padding"
        app:layout_constraintBottom_toBottomOf="@id/guideline_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <TextView
        android:id="@+id/login_signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_link"
        android:textSize="@dimen/higher_plus_text_size"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_link" />


</androidx.constraintlayout.widget.ConstraintLayout>