...
    android:id="@+id/drawer_navigation_menu"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_navigation_login"
            android:icon="@drawable/ic_drawer_navigation_login_24"
            android:title="@string/drawer_title_login" />
        <item
            android:id="@+id/drawer_navigation_my_properties"
            android:icon="@drawable/ic_details_rooms_24"
            android:title="@string/drawer_title_my_properties"
...
