...
        android:overScrollMode="always"
        app:layout_constraintTop_toBottomOf="@id/list_filter_buttons_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
